# rutt

./: .gitattributes  Cargo.toml  GEMINI.md  README.md  build.gradle.kts  detekt.yml  gemini-conversation-1774066841195.json  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
composeApp/: build.gradle.kts
composeApp/src/jvmMain/kotlin/app/rutt/rutt/: App.kt  Greeting.kt  Platform.kt  main.kt
composeApp/src/jvmMain/kotlin/rutt/: App.kt  main.kt
composeApp/src/jvmTest/kotlin/app/rutt/rutt/: ComposeAppDesktopTest.kt
composeApp/src/jvmTest/kotlin/rutt/: ComposeAppDesktopTest.kt
docs/: OUTLINE.md
gradle/: libs.versions.toml
rutt-core/: Cargo.toml
rutt-core/src/: lib.rs
rutt-gui/: Cargo.toml
rutt-gui/src/: main.rs
rutt-gui/ui/: appwindow.slint
rutt-tui/: Cargo.toml
rutt-tui/src/: main.rs
