[workspace]
resolver = "2"
members = [
    "rutt-core",
    "rutt-tui",
    "rutt-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["rutt developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dconeybe/rutt"
description = "A dual-interface (GUI/TUI) file explorer with Vim-like bindings"

[workspace.dependencies]
rutt-core = { path = "rutt-core" }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
slint = "1.9"
slint-build = "1.9"
